--- a/clase1705/package.json
+++ b/clase1705/package.json
@@ -4,7 +4,7 @@
   "description": "prueba de express",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node src/index.js"
   },
   "keywords": [],
   "author": "",
